--- a/index.html
+++ b/index.html
@@ -3,11 +3,133 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Table</title>
+    <title>David Kpedi</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>REPLACE THIS WITH A TABLE TITLE</h1>
-    <div class="table-container">REPLACE THIS WITH YOUR GENERATED TABLE</div>
+    <h1>DJ Mix Essentials</h1>
+    <div class="table-container"><style type="text/css">
+      .tg  {border-collapse:collapse;border-spacing:0;}
+      .tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+        overflow:hidden;padding:10px 5px;word-break:normal;}
+      .tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+        font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+      .tg .tg-0pky{border-color:inherit;text-align:left;vertical-align:top}
+      </style>
+      <table class="tg">
+      <thead>
+        <tr>
+          <th class="tg-0pky">ARTIST</th>
+          <th class="tg-0pky">SONG</th>
+          <th class="tg-0pky">DATE RELEASED</th>
+          <th class="tg-0pky">COUNTRY OF ORIGIN</th>
+          <th class="tg-0pky">GENRE</th>
+          <th>RATINGS/COMMENTS</th>
+        </tr>
+        <tr>
+          <th class="tg-0pky">Burnaboy</th>
+          <th class="tg-0pky">YE</th>
+          <th class="tg-0pky">2019</th>
+          <th class="tg-0pky">Nigeria</th>
+          <th class="tg-0pky">Afrobeats</th>
+          <th>10/10 A VIBE</th>
+        </tr>
+        <TR>
+          <th class="tg-0pky">Wizkid</th>
+          <th class="tg-0pky">Grace</th>
+          <th class="tg-0pky">2020</th>
+          <th class="tg-0pky">Nigeria</th>
+          <th class="tg-0pky">Afrobeats</th>
+          <th>10/10 Calm vibe</th>
+        </TR>
+        <tr>
+          <th class="tg-0pky">Polo G</th>
+          <th class="tg-0pky">21</th>
+          <th class="tg-0pky">2020</th>
+          <th class="tg-0pky">Chicago,IL</th>
+          <th class="tg-0pky">Hip-Hop/Rap</th>
+          <th>10/10 Classic</th>
+        </tr>
+        <tr>
+          <th class="tg-0pky">J Hus</th>
+          <th class="tg-0pky">Spirit</th>
+          <th class="tg-0pky">2017</th>
+          <th class="tg-0pky">London,England</th>
+          <th class="tg-0pky">Hip-Hop/Rap</th>
+          <th>10/10 Hit</th>
+        </tr>
+        <tr>
+          <th class="tg-0pky">Rema</th>
+          <th class="tg-0pky">Calm Down</th>
+          <th class="tg-0pky">2022</th>
+          <th class="tg-0pky">Nigeria</th>
+          <th class="tg-0pky">Afrobeats</th>
+          <th>10/10 Hit</th>
+        </tr>
+        <tr>
+          <th class="tg-0pky">Asake</th>
+          <th class="tg-0pky">Trabaye</th>
+          <th class="tg-0pky">2022</th>
+          <th class="tg-0pky">Nigeria</th>
+          <th class="tg-0pky">Afrobeats</th>
+          <th>9/10 Good music</th>
+        </tr>
+        <tr>
+          <th class="tg-0pky">Davido</th>
+          <th class="tg-0pky">Fall</th>
+          <th class="tg-0pky">2017</th>
+          <th class="tg-0pky">Nigeria</th>
+          <th class="tg-0pky">Afrobeats</th>
+          <th>10/10 Classic</th>
+        </tr>
+        <tr>
+          <th class="tg-0pky">Zinoleesky</th>
+          <th class="tg-0pky">Rocking</th>
+          <th class="tg-0pky">2022</th>
+          <th class="tg-0pky">Nigeria</th>
+          <th class="tg-0pky">Afrobeats</th>
+          <th>10/10 Hit</th>
+        </tr>
+        <tr>
+          <th class="tg-0pky">Kodak Black</th>
+          <th class="tg-0pky">Super Gremlin</th>
+          <th class="tg-0pky">2022</th>
+          <th class="tg-0pky">Pompano Beach,FL</th>
+          <th class="tg-0pky">Hip-Hop/Rap</th>
+          <th>10/10 Hit</th>
+        </tr>
+        <tr>
+          <th class="tg-0pky">lil baby</th>
+          <th class="tg-0pky">All in</th>
+          <th class="tg-0pky">2020</th>
+          <th class="tg-0pky">Atlanta,GA</th>
+          <th class="tg-0pky">Hip-Hop/Rap</th>
+          <th>10/10 Hit</th>
+
+
+        </tr>
+      </thead>
+      <tbody>
+        
+        </tr>
+        <tr>
+        </tr>
+      </tbody>
+      </table></div>
+
+      <section>
+<main>
+<footer>
+  ©2022 -David Kpedi
+</footer>
+
+
+
+</main>
+
+
+
+      </section>
   </body>
+  
 </html>
